src/styles.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@source "./**/*.{tsx,ts,html}";
@source "./react/**/*.tsx";
@source "./app/**/*.ts";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-sans: "Inter Variable", ui-sans-serif, system-ui, sans-serif;
  --container-site: 128rem;
  --color-background: hsl(var(--background));
  --color-foreground: hsl(var(--foreground));
  --color-card: hsl(var(--card));
  --color-card-foreground: hsl(var(--card-foreground));
  --color-popover: hsl(var(--popover));
  --color-popover-foreground: hsl(var(--popover-foreground));
  --color-primary: hsl(var(--primary));
  --color-primary-foreground: hsl(var(--primary-foreground));
  --color-secondary: hsl(var(--secondary));
  --color-secondary-foreground: hsl(var(--secondary-foreground));
  --color-muted: hsl(var(--muted));
  --color-muted-foreground: hsl(var(--muted-foreground));
  --color-accent: hsl(var(--accent));
  --color-accent-foreground: hsl(var(--accent-foreground));
  --color-destructive: hsl(var(--destructive));
  --color-destructive-foreground: hsl(var(--destructive-foreground));
  --color-border: hsl(var(--border));
  --color-input: hsl(var(--input));
  --color-ring: hsl(var(--ring));
  --color-chart-1: hsl(var(--chart-1));
  --color-chart-2: hsl(var(--chart-2));
  --color-chart-3: hsl(var(--chart-3));
  --color-chart-4: hsl(var(--chart-4));
  --color-chart-5: hsl(var(--chart-5));
  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 2px);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
  --color-sidebar: hsl(var(--sidebar));
  --color-sidebar-foreground: hsl(var(--sidebar-foreground));
  --color-sidebar-primary: hsl(var(--sidebar-primary));
  --color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
  --color-sidebar-accent: hsl(var(--sidebar-accent));
  --color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
  --color-sidebar-border: hsl(var(--sidebar-border));
  --color-sidebar-ring: hsl(var(--sidebar-ring));
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 14.5%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 14.5%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 14.5%;
    --primary: 0 0% 20.5%;
    --primary-foreground: 0 0% 98.5%;
    --secondary: 0 0% 97%;
    --secondary-foreground: 0 0% 20.5%;
    --muted: 0 0% 97%;
    --muted-foreground: 0 0% 46%;
    --accent: 0 0% 97%;
    --accent-foreground: 0 0% 20.5%;
    --destructive: 27.3 24.5% 57.7%;
    --destructive-foreground: 27.3 24.5% 57.7%;
    --border: 0 0% 92.2%;
    --input: 0 0% 92.2%;
    --ring: 0 0% 70.8%;
    --chart-1: 41.1 22.2% 64.6%;
    --chart-2: 184.7 11.8% 60%;
    --chart-3: 227.4 7% 39.8%;
    --chart-4: 84.4 18.9% 82.8%;
    --chart-5: 70.1 18.8% 76.9%;
    --radius: 0.625rem;
    --sidebar: 0 0% 98.5%;
    --sidebar-foreground: 0 0% 14.5%;
    --sidebar-primary: 0 0% 20.5%;
    --sidebar-primary-foreground: 0 0% 98.5%;
    --sidebar-accent: 0 0% 97%;
    --sidebar-accent-foreground: 0 0% 20.5%;
    --sidebar-border: 0 0% 92.2%;
    --sidebar-ring: 0 0% 70.8%;
  }

  .dark,
  [data-theme="dark"],
  [data-theme="classic-dark"] {
    --background: 0 0% 14.5%;
    --foreground: 0 0% 98.5%;
    --card: 0 0% 0%;
    --card-foreground: 0 0% 98.5%;
    --popover: 0 0% 14.5%;
    --popover-foreground: 0 0% 98.5%;
    --primary: 0 0% 98.5%;
    --primary-foreground: 0 0% 20.5%;
    --secondary: 0 0% 26.9%;
    --secondary-foreground: 0 0% 98.5%;
    --muted: 0 0% 26.9%;
    --muted-foreground: 0 0% 70.8%;
    --accent: 0 0% 26.9%;
    --accent-foreground: 0 0% 98.5%;
    --destructive: 25.7 14.1% 39.6%;
    --destructive-foreground: 25.3 23.7% 63.7%;
    --border: 0 0% 26.9%;
    --input: 0 0% 26.9%;
    --ring: 0 0% 55.6%;
    --chart-1: 264.4 24.3% 48.8%;
    --chart-2: 162.5 17% 69.6%;
    --chart-3: 70.1 18.8% 76.9%;
    --chart-4: 303.9 26.5% 62.7%;
    --chart-5: 16.4 24.6% 64.5%;
    --sidebar: 0 0% 20.5%;
    --sidebar-foreground: 0 0% 98.5%;
    --sidebar-primary: 264.4 24.3% 48.8%;
    --sidebar-primary-foreground: 0 0% 98.5%;
    --sidebar-accent: 0 0% 26.9%;
    --sidebar-accent-foreground: 0 0% 98.5%;
    --sidebar-border: 0 0% 26.9%;
    --sidebar-ring: 0 0% 43.9%;
  }
}

@layer base {
  * {
    border-color: hsl(var(--border));
  }
  html {
    scroll-behavior: smooth;
  }
  body {
    background-color: hsl(var(--background));
    color: hsl(var(--foreground));
    font-synthesis-weight: none;
    text-rendering: optimizeLegibility;
  }
}

@layer utilities {
  .step {
    counter-increment: step;
  }

  .step:before {
    position: absolute;
    width: 2.25rem;
    height: 2.25rem;
    background-color: hsl(var(--muted));
    border-radius: 9999px;
    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
    font-weight: 500;
    text-align: center;
    font-size: 1rem;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border: 4px solid hsl(var(--background));
    margin-left: -50px;
    margin-top: -4px;
    content: counter(step);
  }

  .chunk-container {
    box-shadow: none;
  }

  .chunk-container::after {
    content: "";
    position: absolute;
    inset: -1rem;
    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.08), 0 0 20px rgba(0, 0, 0, 0.02);
    border-radius: 0.75rem;
    border: 1px solid hsl(var(--border));
  }
}

@media (max-width: 640px) {
  .container {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

[data-theme="dark"],
.dark {
  --code-token-keyword: #bda4ff;
  --code-foreground: #ffffff;
  --code-token-constant: #3ecf8e;
  --code-token-string: #ffcda1;
  --code-token-comment: #7e7e7e;
  --code-token-parameter: #ffffff;
  --code-token-function: #3ecf8e;
  --code-token-string-expression: #ffcda1;
  --code-token-punctuation: #ffffff;
  --code-token-link: #ffffff;
  --code-token-number: #ffffff;
  --code-token-property: #3ecf8e;
  --code-highlight-color: #232323;
}

[data-theme="light"],
.light {
  --code-token-keyword: #6b35dc;
  --code-foreground: hsl(0 0% 42%);
  --code-token-constant: #15593b;
  --code-token-string: #f1a10d;
  --code-token-comment: #7e7e7e;
  --code-token-parameter: hsl(0 0% 42%);
  --code-token-function: #15593b;
  --code-token-string-expression: #f1a10d;
  --code-token-punctuation: hsl(0 0% 42%);
  --code-token-link: hsl(0 0% 42%);
  --code-token-number: hsl(0 0% 42%);
  --code-token-property: #15593b;
  --code-highlight-color: #1c1c1c;
}

@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.shimmering-loader {
  animation: shimmer 2s infinite linear;
  background: linear-gradient(
    to right,
    hsl(0 0% 92.2%) 4%,
    hsl(0 0% 97%) 25%,
    hsl(0 0% 92.2%) 36%
  );
  background-size: 1000px 100%;
}

.dark .shimmering-loader {
  animation: shimmer 2s infinite linear;
  background: linear-gradient(
    to right,
    hsl(0 0% 26.9%) 4%,
    hsl(0 0% 20.5%) 25%,
    hsl(0 0% 26.9%) 36%
  );
  background-size: 1000px 100%;
}

@keyframes shimmer {
  0% {
    background-position: -1000px 0;
  }
  100% {
    background-position: 1000px 0;
  }
}

.shimmer-sweep {
  animation: sweep 2.5s linear infinite;
}

@keyframes sweep {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}

